--- a/script.ipynb
+++ b/script.ipynb
@@ -20,18 +20,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import spacy\n",
-    "from spacy.matcher import Matcher\n",
-    "\n",
-    "nlp = spacy.load('en_core_web_sm')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -40,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -226,6 +214,11 @@
     }
    ],
    "source": [
+    "import spacy\n",
+    "from spacy.matcher import Matcher\n",
+    "\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "\n",
     "\"\"\"\n",
     "Active = \"Harry ate six shrimp at dinner.\\\n",
     "Beautiful giraffes roam the savannah.\\\n",
@@ -424,59 +417,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Tense"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Present perfect\n"
-     ]
-    }
-   ],
-   "source": [
-    "from spacy.matcher import Matcher\n",
-    "\n",
-    "#PRESENT PERFECT CONTINUOUS\n",
-    "def on_matchppct(matcher, doc, id, matches):\n",
-    "        print(\"PRESENT PERFECT CONTINUOUS\")\n",
-    "matcher = Matcher(nlp.vocab)\n",
-    "matcher.add('PPCT',on_matchppct,[{\"LOWER\": \"has\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PPCT',on_matchppct,[{\"LOWER\": \"have\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
-    "\n",
-    "#PRESENT PERFECT\n",
-    "def on_matchppt(matcher, doc, id, matches):\n",
-    "        print(\"Present perfect\")\n",
-    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"has\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
-    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"have\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
-    "\n",
-    "#PRESENT CONTINUOUS\n",
-    "def on_matchpc(matcher, doc, id, matches):\n",
-    "        print(\"PRESENT CONTINUOUS\")\n",
-    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"is\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"am\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"are\"},{'TAG':'VBG'}])\n",
-    "\n",
-    "#PAST PERFECT\n",
-    "def on_match_pastperf(matcher, doc, id, matches):\n",
-    "    print(\"PAST PERFECT\")\n",
-    "matcher.add('PASTPERF',on_match_pastperf,[{\"LOWER\":\"had\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBN'}])\n",
-    "\n",
-    "\n",
-    "doc=nlp(\"He has finished his homework.\")\n",
-    "matches = matcher(doc)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 9. Emoji\n",
     "\n",
     "Using the python package \"spacymoji\"\n",
@@ -485,18 +425,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"assert doc[2:5]._.has_emoji == True\\nassert doc[0]._.is_emoji == False\\nassert doc[4]._.is_emoji == True\\nassert doc[5]._.emoji_desc == u'thumbs up dark skin tone'\\nassert len(doc._.emoji) == 2\\nassert doc._.emoji[1] == (u'👍🏿', 5, u'thumbs up dark skin tone')\""
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'nlp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-893103dbd39e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mspacymoji\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEmoji\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0memoji\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mEmoji\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnlp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[1;31m#nlp.add_pipe(emoji, first=True)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0mdoc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnlp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mu\"This is a test 😻 👍🏿\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'nlp' is not defined"
+     ]
     }
    ],
    "source": [
@@ -525,18 +466,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'cytoolz'",
+     "evalue": "No module named 'keras'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-fae64320efc4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpathlib\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mcytoolz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'cytoolz'"
+      "\u001b[1;32m<ipython-input-1-fae64320efc4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mcytoolz\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mSequential\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel_from_json\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLSTM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDense\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mEmbedding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mBidirectional\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mTimeDistributed\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
      ]
     }
    ],
@@ -813,6 +754,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FUTURE SIMPLE\n"
+     ]
+    }
+   ],
+   "source": [
+    "#PRESENT PERFECT CONTINUOUS\n",
+    "from spacy.matcher import Matcher\n",
+    "def on_matchppct(matcher, doc, id, matches):\n",
+    "        print(\"PRESENT PERFECT CONTINUOUS\")\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "matcher.add('PPCT',on_matchppct,[{\"LOWER\": \"has\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PPCT',on_matchppct,[{'TAG':'MD','OP':'!'},{'DEP':'nsubj','OP':'!'},{'DEP':'neg','OP':'!'},{\"LOWER\": \"have\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
+    "#PRESENT PERFECT\n",
+    "def on_matchppt(matcher, doc, id, matches):\n",
+    "        print(\"Present perfect\")\n",
+    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"has\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
+    "matcher.add('PPT',on_matchppt,[{'TAG':'MD','OP':'!'},{'DEP':'nsubj','OP':'!'},{'DEP':'neg','OP':'!'},{\"LOWER\": \"have\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
+    "#PRESENT CONTINUOUS\n",
+    "def on_matchpc(matcher, doc, id, matches):\n",
+    "        print(\"PRESENT CONTINUOUS\")\n",
+    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"is\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"am\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"are\"},{'TAG':'VBG'}])\n",
+    "#PAST PERFECT\n",
+    "def on_match_pastperf(matcher, doc, id, matches):\n",
+    "    print(\"PAST PERFECT\")\n",
+    "matcher.add('PASTPERF',on_match_pastperf,[{\"LOWER\":\"had\"},{\"LOWER\":\"been\",'OP':'!'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"been\",'OP':'!'},{'DEP':'nsubj','OP':'?'},{\"LOWER\":\"been\",'OP':'!'},{'POS':'ADV','OP':'?'},{'TAG':'VBN'}])\n",
+    "#PAST CONTINUOUS\n",
+    "def on_match_pastcont(matcher, doc, id,matches):\n",
+    "    print(\"past continuous\")\n",
+    "matcher.add('PASTCONT',on_match_pastcont,[{\"LOWER\":\"was\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
+    "matcher.add('PASTCONT',on_match_pastcont,[{\"LOWER\":\"were\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
+    "#PAST PERFECT CONTINUOUS\n",
+    "def on_match_pastpc(matcher, doc, id, matches):\n",
+    "    print(\"PAST PERFECT CONTINUOUS\")\n",
+    "matcher.add('PASTPC',on_match_pastpc,[{\"LOWER\":\"had\"},{'DEP':'neg','OP':'?'},{\"LOWER\":\"been\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PASTPC',on_match_pastpc,[{\"LOWER\":\"had\"},{'DEP':'det','OP':'?'},{'DEP':'nsubj','OP':'?'},{\"LOWER\":\"been\"},{'TAG':'VBG'}])\n",
+    "#FUTURE SIMPLE\n",
+    "def on_match_futsim(matcher, doc, id, matches):\n",
+    "    print(\"FUTURE SIMPLE\")\n",
+    "matcher.add('FUTSIM',on_match_futsim,[{'TAG':'MD'},{\"LOWER\":\"be\",'OP':'!'},{'DEP':'nsubj','OP':'?'},{\"LOWER\":\"be\",'OP':'!'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"be\",'OP':'!'},{'TAG':'VB'}])\n",
+    "#FUTURE CONTINUOUS\n",
+    "def on_match_futcont(matcher, doc, id, matches):\n",
+    "    print(\"FUTURE CONTINUOUS\")\n",
+    "matcher.add('FUTCONT',on_match_futcont,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"be\"},{'TAG':'VBG'}])\n",
+    "#FUTURE PERFECT\n",
+    "def on_match_futperf(matcher, doc, id, matches):\n",
+    "    print(\"future perfect\")\n",
+    "matcher.add('FUTPERF',on_match_futperf,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"have\"},{\"LOWER\":\"been\",'OP':'!'},{'TAG':'VBN'}])\n",
+    "#FUTURE PERFECT CONTINUOUS\n",
+    "def on_match_futpc(matcher, doc, id, matches):\n",
+    "    print(\"FUTURE PERFECT CONTINUOUS\")\n",
+    "matcher.add('FUTPC',on_match_futpc,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"have\"},{\"LOWER\":\"been\"},{'TAG':'VBG'}])\n",
+    "doc=nlp(\"will he have been loving her for 5 years\")\n",
+    "matches = matcher(doc)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -835,7 +842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8rc1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
