--- a/script.ipynb
+++ b/script.ipynb
@@ -28,12 +28,13 @@
     "import spacy\n",
     "from spacy.matcher import Matcher\n",
     "\n",
-    "nlp = spacy.load('en_core_web_sm')"
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "matcher = Matcher(nlp.vocab)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2923,8 +2924,16 @@
     "        data = json.loads(line)\n",
     "        d_text = d_text + data['body'] + \"\\n\"\n",
     "        \n",
-    "print(d_text)\n",
-    "   # rc_dict = json.load(f)"
+    "print(d_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = nlp(d_text)"
    ]
   },
   {
@@ -2936,7 +2945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -13801,9 +13810,9 @@
     }
    ],
    "source": [
-    "def calcVerb(num, sent):\n",
+    "def calcVerb(text):\n",
     "    c=0\n",
-    "    for word in sent:\n",
+    "    for word in text:\n",
     "        if(word.pos_=='VERB'):\n",
     "            c=c+1\n",
     "    if(c<3):\n",
@@ -13852,12 +13861,10 @@
     "The service staff was slow to respond and down right rude in some cases.\\\n",
     "Finally it's been two months and they won't credit me the airline miles for my stay.\\\n",
     "This was one of the worst hotels I've ever had the misfortune to stay at.\"\n",
-    "\n",
-    "doc = nlp(d_text)\n",
     "        \n",
     "for num,sentence in enumerate(doc.sents):\n",
     "    print(f'{num}: {sentence}')\n",
-    "    calcVerb(num,sentence)"
+    "    calcVerb(sentence)"
    ]
   },
   {
@@ -13877,7 +13884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -14063,19 +14070,10 @@
     "The last cookie was eaten by whom?\"\n",
     "\"\"\"\n",
     "\n",
-    "matcher = Matcher(nlp.vocab)\n",
-    "text = \"Women are not treated as equals.\"\n",
-    "doc = nlp(d_text)\n",
-    "#sents = list(doc.sents)\n",
-    "#print(\"Number of Sentences = \",len(sents))\n",
-    "\"\"\"\n",
-    "for sent in doc.sents:\n",
-    "    for token in sent:\n",
-    "        print(token.dep_,token.tag_, end = \" \")\n",
-    "    print()\n",
-    "\"\"\"\n",
     "passive_rule = [{'DEP':'nsubjpass'},{'DEP':'aux','OP':'*'},{'DEP':'auxpass'},{'TAG':'VBN'}]\n",
     "matcher.add('Passive',None,passive_rule)\n",
+    "\n",
+    "text = \"Women are not treated as equals.\"\n",
     "matches = matcher(doc)\n",
     "print(\"The number of sentences found: \",len(matches))\n",
     "if (len(matches) != 0):\n",
@@ -14093,42 +14091,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: He has been reading the book for two hours.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Argument 'doc' has incorrect type (expected spacy.tokens.doc.Doc, got spacy.tokens.span.Span)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-6-a92246829633>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mnum\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0msentence\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mding\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msents\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'{num}: {sentence}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 67\u001b[1;33m     \u001b[0mtense_form\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     68\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[1;31m#tense_form(ding)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-6-a92246829633>\u001b[0m in \u001b[0;36mtense_form\u001b[1;34m(text)\u001b[0m\n\u001b[0;32m     56\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mtense_form\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[0mmatches\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmatcher\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m \u001b[0mdd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnlp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"He has been reading the book for two hours. He has finished his homework.\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: Argument 'doc' has incorrect type (expected spacy.tokens.doc.Doc, got spacy.tokens.span.Span)"
+     ]
+    }
+   ],
    "source": [
-    "from spacy.matcher import Matcher\n",
-    "\n",
     "#PRESENT PERFECT CONTINUOUS\n",
-    "def on_matchppct(matcher, doc, id, matches):\n",
+    "def on_match_ppc(matcher, doc, id, matches):\n",
     "        print(\"PRESENT PERFECT CONTINUOUS\")\n",
-    "matcher = Matcher(nlp.vocab)\n",
-    "matcher.add('PPCT',on_matchppct,[{\"LOWER\": \"has\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PPCT',on_matchppct,[{'TAG':'MD','OP':'!'},{'DEP':'nsubj','OP':'!'},{'DEP':'neg','OP':'!'},{\"LOWER\": \"have\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PPC',on_match_ppc,[{\"LOWER\": \"has\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PPC',on_match_ppc,[{'TAG':'MD','OP':'!'},{'DEP':'nsubj','OP':'!'},{'DEP':'neg','OP':'!'},{\"LOWER\": \"have\"},{\"LOWER\": \"been\"},{'TAG':'VBG'}])\n",
     "\n",
     "#PRESENT PERFECT\n",
-    "def on_matchppt(matcher, doc, id, matches):\n",
+    "def on_match_ppt(matcher, doc, id, matches):\n",
     "        print(\"Present perfect\")\n",
-    "matcher.add('PPT',on_matchppt,[{\"LOWER\": \"has\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
-    "matcher.add('PPT',on_matchppt,[{'TAG':'MD','OP':'!'},{'DEP':'nsubj','OP':'!'},{'DEP':'neg','OP':'!'},{\"LOWER\": \"have\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
+    "matcher.add('PPT',on_match_ppt,[{\"LOWER\": \"has\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
+    "matcher.add('PPT',on_match_ppt,[{'TAG':'MD','OP':'!'},{'DEP':'nsubj','OP':'!'},{'DEP':'neg','OP':'!'},{\"LOWER\": \"have\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'TAG':'VBN'}])\n",
     "\n",
     "#PRESENT CONTINUOUS\n",
-    "def on_matchpc(matcher, doc, id, matches):\n",
+    "def on_match_pc(matcher, doc, id, matches):\n",
     "        print(\"PRESENT CONTINUOUS\")\n",
-    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"is\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"am\"},{'TAG':'VBG'}])\n",
-    "matcher.add('PCTense',on_matchpc,[{\"LOWER\": \"are\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PC',on_match_pc,[{\"LOWER\": \"is\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PC',on_match_pc,[{\"LOWER\": \"am\"},{'TAG':'VBG'}])\n",
+    "matcher.add('PC',on_match_pc,[{\"LOWER\": \"are\"},{'TAG':'VBG'}])\n",
     "\n",
     "#PAST PERFECT\n",
-    "def on_match_pastperf(matcher, doc, id, matches):\n",
+    "def on_match_pastpt(matcher, doc, id, matches):\n",
     "    print(\"PAST PERFECT\")\n",
-    "matcher.add('PASTPERF',on_match_pastperf,[{\"LOWER\":\"had\"},{\"LOWER\":\"been\",'OP':'!'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"been\",'OP':'!'},{'DEP':'nsubj','OP':'?'},{\"LOWER\":\"been\",'OP':'!'},{'POS':'ADV','OP':'?'},{'TAG':'VBN'}])\n",
+    "matcher.add('PASTPT',on_match_pastpt,[{\"LOWER\":\"had\"},{\"LOWER\":\"been\",'OP':'!'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"been\",'OP':'!'},{'DEP':'nsubj','OP':'?'},{\"LOWER\":\"been\",'OP':'!'},{'POS':'ADV','OP':'?'},{'TAG':'VBN'}])\n",
     "\n",
     "#PAST CONTINUOUS\n",
-    "def on_match_pastcont(matcher, doc, id,matches):\n",
-    "    print(\"past continuous\")\n",
-    "matcher.add('PASTCONT',on_match_pastcont,[{\"LOWER\":\"was\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
-    "matcher.add('PASTCONT',on_match_pastcont,[{\"LOWER\":\"were\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
+    "def on_match_pastc(matcher, doc, id,matches):\n",
+    "    print(\"PAST CONTINUOUS\")\n",
+    "matcher.add('PASTC',on_match_pastc,[{\"LOWER\":\"was\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
+    "matcher.add('PASTC',on_match_pastc,[{\"LOWER\":\"were\"},{'DEP':'neg','OP':'?'},{'DEP':'nsubj','OP':'?'},{'POS':'ADV','OP':'?'},{'TAG':'VBG'}])\n",
     "\n",
     "#PAST PERFECT CONTINUOUS\n",
     "def on_match_pastpc(matcher, doc, id, matches):\n",
@@ -14142,23 +14157,35 @@
     "matcher.add('FUTSIM',on_match_futsim,[{'TAG':'MD'},{\"LOWER\":\"be\",'OP':'!'},{'DEP':'nsubj','OP':'?'},{\"LOWER\":\"be\",'OP':'!'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"be\",'OP':'!'},{'TAG':'VB'}])\n",
     "\n",
     "#FUTURE CONTINUOUS\n",
-    "def on_match_futcont(matcher, doc, id, matches):\n",
+    "def on_match_futc(matcher, doc, id, matches):\n",
     "    print(\"FUTURE CONTINUOUS\")\n",
-    "matcher.add('FUTCONT',on_match_futcont,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"be\"},{'TAG':'VBG'}])\n",
+    "matcher.add('FUTC',on_match_futc,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"be\"},{'TAG':'VBG'}])\n",
     "\n",
     "#FUTURE PERFECT\n",
-    "def on_match_futperf(matcher, doc, id, matches):\n",
-    "    print(\"future perfect\")\n",
-    "matcher.add('FUTPERF',on_match_futperf,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"have\"},{\"LOWER\":\"been\",'OP':'!'},{'TAG':'VBN'}])\n",
+    "def on_match_futpt(matcher, doc, id, matches):\n",
+    "    print(\"FUTURE PERFECT\")\n",
+    "matcher.add('FUTPT',on_match_futpt,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"have\"},{\"LOWER\":\"been\",'OP':'!'},{'TAG':'VBN'}])\n",
     "\n",
     "#FUTURE PERFECT CONTINUOUS\n",
     "def on_match_futpc(matcher, doc, id, matches):\n",
     "    print(\"FUTURE PERFECT CONTINUOUS\")\n",
     "matcher.add('FUTPC',on_match_futpc,[{'TAG':'MD'},{'DEP':'nsubj','OP':'?'},{'DEP':'neg','OP':'?'},{\"LOWER\":\"have\"},{\"LOWER\":\"been\"},{'TAG':'VBG'}])\n",
     "\n",
+    "def tense_form(text):\n",
+    "    matches = matcher(text)\n",
+    "\n",
+    "dd = nlp(\"He has been reading the book for two hours. He has finished his homework.\")\n",
+    "ding = nlp(\"He has been reading the book for two hours.\")\n",
+    "dong = nlp(\"He has finished his homework.\")\n",
+    "\n",
     "#sentence input\n",
-    "doc=nlp(\"will he have been loving her for 5 years\")\n",
-    "matches = matcher(doc)"
+    "for num,sentence in enumerate(ding.sents):\n",
+    "    print(f'{num}: {sentence}')\n",
+    "    tense_form(sentence)\n",
+    "\n",
+    "#tense_form(ding)\n",
+    "#tense_form(dong)\n",
+    "#matches = matcher(doc)"
    ]
   },
   {
@@ -14173,9 +14200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"assert doc[2:5]._.has_emoji == True\\nassert doc[0]._.is_emoji == False\\nassert doc[4]._.is_emoji == True\\nassert doc[5]._.emoji_desc == u'thumbs up dark skin tone'\\nassert len(doc._.emoji) == 2\\nassert doc._.emoji[1] == (u'👍🏿', 5, u'thumbs up dark skin tone')\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import spacy\n",
     "from spacymoji import Emoji\n",
