--- a/script.ipynb
+++ b/script.ipynb
@@ -3045,9 +3045,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Passive | Simple Future\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Active = \"Harry ate six shrimp at dinner.\\\n",
@@ -3222,31 +3230,58 @@
     "The last cookie was eaten by whom?\"\n",
     "\"\"\"\n",
     "\n",
-    "passive_rule = [{'DEP':'nsubjpass'},{'DEP':'aux','OP':'*'},{'DEP':'auxpass'},{'TAG':'VBN'}]\n",
-    "matcher.add('Passive',None,passive_rule)\n",
+    "#passive_rule = [{'DEP':'nsubjpass'},{'DEP':'aux','OP':'*'},{'DEP':'auxpass'},{'TAG':'VBN'}]\n",
+    "#matcher.add('Passive',None,passive_rule)\n",
     "\n",
     "#Simple Present\n",
-    "pass_spres = [{'DEP':'nsubjpass'},{'DEP':'aux','OP':'*'},{'DEP':'auxpass'},{'TAG':'VBN'}]\n",
-    "matcher.add('Passive | Simple Present',None,pass_spres)\n",
+    "def on_match_p_spres(matcher, doc, id, matches):\n",
+    "    print(\"Passive | Simple Present\")\n",
+    "matcher.add('p_spres',on_match_p_spres,[{'DEP':'nsubjpass'},{'DEP':'aux','OP':'*'},{'DEP':'auxpass','TAG':'VBZ'},{'TAG':'VBN'}])\n",
     "\n",
-    "#\n",
+    "#Present Continuous\n",
+    "def on_match_p_presc(matcher, doc, id, matches):\n",
+    "    print(\"Passive | Present Continuous\")\n",
+    "matcher.add('p_presc',on_match_p_presc,[{'DEP':'nsubjpass'},{'DEP':'aux','TAG':'VBZ','OP':'*'},{'DEP':'auxpass','TAG':'VBG'},{'TAG':'VBN'}])\n",
+    "\n",
+    "#Simple Past\n",
+    "def on_match_p_spast(matcher, doc, id, matches):\n",
+    "    print(\"Passive | Simple Past\")\n",
+    "matcher.add('p_spast',on_match_p_spast,[{'DEP':'nsubjpass'},{'DEP':'aux','OP':'*'},{'DEP':'auxpass','TAG':'VBD'},{'TAG':'VBN'}])\n",
+    "\n",
+    "#Past Continuous\n",
+    "def on_match_p_pastc(matcher, doc, id, matches):\n",
+    "    print(\"Passive | Past Continuous\")\n",
+    "matcher.add('p_pastc',on_match_p_pastc,[{'DEP':'nsubjpass'},{'DEP':'aux','TAG':'VBD','OP':'*'},{'DEP':'auxpass','TAG':'VBG'},{'TAG':'VBN'}])\n",
+    "\n",
+    "#Past Perfect\n",
+    "def on_match_p_pastp(matcher, doc, id, matches):\n",
+    "    print(\"Passive | Past Perfect\")\n",
+    "matcher.add('p_pastp',on_match_p_pastp,[{'DEP':'nsubjpass'},{'LEMMA':'have','DEP':'aux','TAG':'VBD','OP':'*'},{'DEP':'auxpass','TAG':'VBN'},{'TAG':'VBN'}])\n",
+    "\n",
+    "#Simple Future\n",
+    "def on_match_p_sfut(matcher, doc, id, matches):\n",
+    "    print(\"Passive | Simple Future\")\n",
+    "matcher.add('p_sfut',on_match_p_sfut,[{'DEP':'nsubjpass'},{'LEMMA':'will','DEP':'aux','TAG':'MD','OP':'*'},{'DEP':'auxpass','TAG':'VB'},{'TAG':'VBN'}])\n",
+    "\n",
+    "#Simple Future\n",
+    "def on_match_p_sfut(matcher, doc, id, matches):\n",
+    "    print(\"Passive | Simple Future\")\n",
+    "matcher.add('p_sfut',on_match_p_sfut,[{'DEP':'nsubjpass'},{'LEMMA':'will','DEP':'aux','TAG':'MD','OP':'*'},{'DEP':'auxpass','TAG':'VB'},{'TAG':'VBN'}])\n",
     "\n",
     "\n",
+    "ex = nlp(\"The homework will be done by Anya\")\n",
+    "matches = matcher(ex)\n",
     "\n",
-    "\n",
-    "\n",
-    "text = \"Women are not treated as equals.\"\n",
-    "matches = matcher(doc)\n",
-    "print(\"The number of sentences found: \",len(matches))\n",
-    "if (len(matches) != 0):\n",
-    "    print(\"Passive\")\n",
-    "else:\n",
-    "    print(\"Active\")"
+    "#print(\"The number of sentences found: \",len(matches))\n",
+    "#if (len(matches) != 0):\n",
+    "#    print(\"Passive\")\n",
+    "#else:\n",
+    "#    print(\"Active\")'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -3255,8 +3290,8 @@
      "text": [
       "The the DET DT det Xxx True True\n",
       "homework homework NOUN NN nsubjpass xxxx True False\n",
-      "is be VERB VBZ aux xx True True\n",
-      "being be VERB VBG auxpass xxxx True True\n",
+      "will will VERB MD aux xxxx True True\n",
+      "be be VERB VB auxpass xx True True\n",
       "done do VERB VBN ROOT xxxx True True\n",
       "by by ADP IN agent xx True True\n",
       "Anya Anya PROPN NNP pobj Xxxx True False\n"
@@ -3264,11 +3299,31 @@
     }
    ],
    "source": [
-    "lol = nlp(\"The homework is being done by Anya\")\n",
+    "lol = nlp(\"The homework will be done by Anya\")\n",
     "\n",
     "for token in lol:\n",
     "    print(token.text, token.lemma_, token.pos_, token.tag_, token.dep_,\n",
     "            token.shape_, token.is_alpha, token.is_stop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'verb, modal auxiliary'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spacy.explain('MD')"
    ]
   },
   {
