added senticizer based tense form prediction

--- a/script.ipynb
+++ b/script.ipynb
@@ -3338,7 +3338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3401,19 +3401,47 @@
     "def tense_form(text):\n",
     "    matches = matcher(text)\n",
     "\n",
-    "dd = nlp(\"He has been reading the book for two hours. He has finished his homework.\")\n",
-    "ding = nlp(\"He has been reading the book for two hours.\")\n",
-    "dong = nlp(\"He has finished his homework.\")\n",
+    "# dd = nlp(\"He has been reading the book for two hours. He has finished his homework.\")\n",
+    "# ding = nlp(\"He has been reading the book for two hours.\")\n",
+    "# dong = nlp(\"He has finished his homework.\")\n",
     "\n",
-    "#sentence input\n",
-    "for num,sentence in enumerate(dd.sents):\n",
-    "    print(f'{num}: {sentence}')\n",
-    "    #sn = nlp(sentence)\n",
-    "    tense_form(sentence)\n",
+    "# #sentence input\n",
+    "# for num,sentence in enumerate(dd.sents):\n",
+    "#     print(f'{num}: {sentence}')\n",
+    "#     #sn = nlp(sentence)\n",
+    "#     tense_form(sentence)\n",
     "\n",
     "#tense_form(\"He has finished his homework.\")\n",
     "#tense_form(dong)\n",
     "#matches = matcher(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sentence :  He has been reading the book for two hours.\n",
+      "Present perfect\n",
+      "PRESENT PERFECT CONTINUOUS\n",
+      "sentence :  He has finished his homework.\n",
+      "Present perfect\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_text = \"He has been reading the book for two hours. He has finished his homework.\"\n",
+    "doc = nlp(raw_text)\n",
+    "sentences = [sent.string.strip() for sent in doc.sents]\n",
+    "\n",
+    "for sentence in sentences:\n",
+    "    print(\"sentence : \",sentence)\n",
+    "    doc = nlp(sentence)\n",
+    "    tense_form(doc)"
    ]
   },
   {
