--- a/script.ipynb
+++ b/script.ipynb
@@ -176,152 +176,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: A camera is bought by him.\n",
-      "Passive | Simple Present\n",
-      "1: Water is drunk by her.\n",
-      "2: He is known to me.\n",
-      "Passive | Simple Present\n",
-      "3: A tub is filled with water.\n",
-      "Passive | Simple Present\n",
-      "4: Sugar is sold in kilograms.\n",
-      "Passive | Simple Present\n",
-      "5: There is a considerable range of expertise demonstrated by the spam senders.\n",
-      "6: It was determined by the committee that the report was inconclusive.\n",
-      "Passive | Simple Past\n",
-      "7: We were invited by our neighbors to attend their party.\n",
-      "Passive | Simple Past\n",
-      "8: Groups help participants realize that most of their problems and secrets are shared by others in the group.\n",
-      "9: The proposed initiative will be bitterly opposed by abortion rights groups.\n",
-      "10: Minor keys, modal movement, and arpeggios are shared by both musical traditions.\n",
-      "11: In this way, the old religion was able to survive the onslaught of new ideas until the old gods were finally displaced by Christianity.\n",
-      "12: First the apples are picked, then they are cleaned, and finally they’re packed and shipped to the market.\n",
-      "13: New York is considered the most diverse city in the U.S.It is believed that Amelia Earhart’s plane crashed in Pacific Ocean.\n",
-      "Passive | Simple Present\n",
-      "14: Hungarian is seen as one of the world’s most difficult languages to learn.\n",
-      "Passive | Simple Present\n",
-      "15: Skin cancers are thought to be caused by excessive exposure to the sun.\n",
-      "16: George Washington was elected president in 1788.Two people were killed in a drive-by shooting on Friday night.\n",
-      "Passive | Simple Past\n",
-      "17: Ten children were injured when part of the school roof collapsed.\n",
-      "Passive | Simple Past\n",
-      "18: I was hit by the dodgeball.\n",
-      "Passive | Simple Past\n",
-      "19: The metropolis has been scorched by the dragon’s fiery breath.\n",
-      "20: When her house was invaded, Penelope had to think of ways to delay her remarriage.\n",
-      "Passive | Simple Past\n",
-      "21: A new system of drug control laws was set up.\n",
-      "22: Heart disease is considered the leading cause of death in the United States.\n",
-      "Passive | Simple Present\n",
-      "23: The balloon is positioned in an area of blockage and is inflated.\n",
-      "Passive | Simple Present\n",
-      "24: The Exxon Company accepts that a few gallons might have been spilled.100 votes are required to pass the bill.\n",
-      "25: Over 120 different contaminants have been dumped into the river.\n",
-      "26: Baby Sophia was delivered at 3:30 a.m. yesterday.\n",
-      "Passive | Simple Past\n",
-      "27: The letters are written by James.\n",
-      "28: The letters were written by James.\n",
-      "Passive | Simple Past\n",
-      "29: The letters are being written by James.\n",
-      "30: The letters have been written by James.\n",
-      "31: The letters are going to be written by James.\n",
-      "32: The letters will be written by James.\n",
-      "Passive | Simple Future\n",
-      "33: The letters were being written by James.\n",
-      "Passive | Past Continuous\n",
-      "34: The cure had been found, but it was too late.\n",
-      "Passive | Past Perfect\n",
-      "35: A cure will have been found by then.\n",
-      "36: Mistakes were made.\n",
-      "Passive | Simple Past\n",
-      "37: The butter is kept in the fridge.\n",
-      "Passive | Simple Present\n",
-      "38: My house is being kept tidy.\n",
-      "Passive | Present Continuous\n",
-      "39: Mary's schedule was kept meticulously.\n",
-      "Passive | Simple Past\n",
-      "40: A seat was being kept for you.\n",
-      "Passive | Past Continuous\n",
-      "41: All your old letters have been kept.\n",
-      "42: His training regimen had been kept up for a month.\n",
-      "Passive | Past Perfect\n",
-      "43: The ficus will be kept.\n",
-      "Passive | Simple Future\n",
-      "44: If you told me, your secret would be kept.\n",
-      "Passive | Past Future\n",
-      "45: Your bicycle would have been kept here if you had left it with me.\n",
-      "46: The book wants to be kept.\n",
-      "47: The puppy was happy to have been kept.\n",
-      "48: I have a feeling that a secret may be being kept.\n",
-      "49: The bird, having been kept in a cage for so long, might not survive in the wild.\n",
-      "50: The car can be sold by her every time.\n",
-      "51: Can a violin be played by her?The house may be sold by him.\n",
-      "Passive | Simple Future\n",
-      "52: May the computer be bought by me?The computer may not be bought by me.\n",
-      "Passive | Simple Future\n",
-      "53: His duty must be finished by him in a week.\n",
-      "54: The gate must not be opened by Dewi every morning.\n",
-      "55: Dewi might be met by him.\n",
-      "56: Chess might not be played guests.\n",
-      "57: At dinner, six shrimp were eaten by Harry.\n",
-      "Passive | Simple Past\n",
-      "58: The savannah is roamed by beautiful giraffes.\n",
-      "Passive | Simple Present\n",
-      "59: The flat tire was changed by Sue.\n",
-      "Passive | Simple Past\n",
-      "60: A movie is going to be watched by us tonight.\n",
-      "61: The obstacle course was run by me in record time.\n",
-      "Passive | Simple Past\n",
-      "62: The entire stretch of highway was paved by the crew.\n",
-      "63: The novel was read by Mom in one day.\n",
-      "Passive | Simple Past\n",
-      "64: A scathing review was written by the critic.\n",
-      "Passive | Simple Past\n",
-      "65: The house will be cleaned by me every Saturday.\n",
-      "Passive | Simple Future\n",
-      "66: A safety video will be watched by the staff every year.\n",
-      "Passive | Simple Future\n",
-      "67: The application for a new job was faxed by her.\n",
-      "68: The entire house was painted by Tom.\n",
-      "Passive | Simple Past\n",
-      "69: The students’ questions are always answered by the teacher.\n",
-      "70: That piece is really enjoyed by the choir.\n",
-      "71: By whom were you taught to ski?The whole suburb was destroyed by the forest fire.\n",
-      "Passive | Simple Past\n",
-      "72: The treaty is being signed by the two kings.\n",
-      "Passive | Present Continuous\n",
-      "73: Every night the office is vacuumed and dusted by the cleaning crew.\n",
-      "Passive | Simple Present\n",
-      "74: Money was generously donated to the homeless shelter by Larry.\n",
-      "75: My sales ad was not responded to by anyone.\n",
-      "76: All the reservations will be made by the wedding planner.\n",
-      "Passive | Simple Future\n",
-      "77: For the bake sale, two dozen cookies will be baked by Susan.\n",
-      "Passive | Simple Future\n",
-      "78: The comet was viewed by the science class.\n",
-      "Passive | Simple Past\n",
-      "79: The video was posted on Facebook by Alex.\n",
-      "Passive | Simple Past\n",
-      "80: Instructions will be given to you by the director.\n",
-      "Passive | Simple Future\n",
-      "81: The Grand Canyon is viewed by thousands of tourists every year.\n",
-      "Passive | Simple Present\n",
-      "82: The house was remodeled by the homeowners to help it sell.\n",
-      "Passive | Simple Past\n",
-      "83: The victory will be celebrated by the team tomorrow.\n",
-      "Passive | Simple Future\n",
-      "84: The metal beams were eventually corroded by the saltwater.\n",
-      "85: The baby was carried by the kangaroo in her pouch.\n",
-      "Passive | Simple Past\n",
-      "86: The last cookie was eaten by whom?\n",
-      "Passive | Simple Past\n"
+      "Passive | Present Continuous\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"for num,sentence in enumerate(nlp(Passive).sents):\\n    print(f'{num}: {sentence}')\\n    s = sentence.as_doc()\\n    matches = matcher(s)\""
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -505,22 +378,24 @@
     "#Simple Present\n",
     "def on_match_p_spres(matcher, doc, id, matches):\n",
     "    print(\"Passive | Simple Present\")\n",
-    "matcher.add('p_spres',on_match_p_spres,[{'DEP':'nsubjpass'},{'DEP':'aux','OP':'*'},{'DEP':'auxpass','TAG':'VBZ'},{'TAG':'VBN'}])\n",
+    "matcher.add('p_spres',on_match_p_spres,[{'DEP':'nsubjpass'},{'DEP':'auxpass','TAG':'VBP'},{'DEP':'neg','OP':'?'},{'DEP':'advmod','OP':'?'},{'TAG':'VBN'}])\n",
     "\n",
     "#Present Continuous\n",
     "def on_match_p_presc(matcher, doc, id, matches):\n",
     "    print(\"Passive | Present Continuous\")\n",
-    "matcher.add('p_presc',on_match_p_presc,[{'DEP':'nsubjpass'},{'DEP':'aux','TAG':'VBZ','OP':'*'},{'DEP':'auxpass','TAG':'VBG'},{'TAG':'VBN'}])\n",
+    "matcher.add('p_presc',on_match_p_presc,[{'DEP':'nsubjpass'},{'DEP':'aux','TAG':'VBP'},{'DEP':'neg','OP':'?'},{'DEP':'advmod','OP':'?'},{'DEP':'auxpass','TAG':'VBG'},{'TAG':'VBN'}])\n",
+    "matcher.add('p_presc',on_match_p_presc,[{'DEP':'nsubjpass'},{'DEP':'auxpass','TAG':'VBZ, VBP'},{'DEP':'neg','OP':'+'},{'DEP':'advmod','OP':'+'},{'DEP':'auxpass','TAG':'VBG'},{'TAG':'VBN'}])\n",
     "\n",
     "#Simple Past\n",
     "def on_match_p_spast(matcher, doc, id, matches):\n",
     "    print(\"Passive | Simple Past\")\n",
-    "matcher.add('p_spast',on_match_p_spast,[{'DEP':'nsubjpass'},{'DEP':'aux','OP':'*'},{'DEP':'auxpass','TAG':'VBD'},{'TAG':'VBN'}])\n",
+    "matcher.add('p_spast',on_match_p_spast,[{'DEP':'nsubjpass'},{'DEP':'auxpass','TAG':'VBD'},{'DEP':'neg','OP':'?'},{'DEP':'advmod','OP':'?'},{'TAG':'VBN'}])\n",
     "\n",
     "#Past Continuous\n",
     "def on_match_p_pastc(matcher, doc, id, matches):\n",
     "    print(\"Passive | Past Continuous\")\n",
-    "matcher.add('p_pastc',on_match_p_pastc,[{'DEP':'nsubjpass'},{'DEP':'aux','TAG':'VBD','OP':'*'},{'DEP':'auxpass','TAG':'VBG'},{'TAG':'VBN'}])\n",
+    "matcher.add('p_pastc',on_match_p_pastc,[{'DEP':'nsubjpass'},{'DEP':'aux','TAG':'VBD'},{'DEP':'neg','OP':'?'},{'DEP':'advmod','OP':'?'},{'DEP':'auxpass','TAG':'VBG'},{'TAG':'VBN'}])\n",
+    "matcher.add('p_presc',on_match_p_presc,[{'DEP':'nsubjpass'},{'DEP':'auxpass','TAG':'VBD'},{'DEP':'neg','OP':'+'},{'DEP':'advmod','OP':'+'},{'DEP':'auxpass','TAG':'VBG'},{'TAG':'VBN'}])\n",
     "\n",
     "#Past Perfect\n",
     "def on_match_p_pastp(matcher, doc, id, matches):\n",
@@ -542,23 +417,43 @@
     "    print(\"Passive | Past Future\")\n",
     "matcher.add('p_pastfut',on_match_p_pastfut,[{'DEP':'nsubjpass'},{'LEMMA':'would','DEP':'aux','TAG':'MD','OP':'+'},{'DEP':'auxpass','TAG':'VB'},{'TAG':'VBN'}])\n",
     "\n",
+    "#Using can\n",
+    "def on_match_p_can(matcher, doc, id, matches):\n",
+    "    print(\"Passive | Using can\")\n",
+    "matcher.add('p_can',on_match_p_can,[{'DEP':'nsubjpass'},{'LEMMA':'would','DEP':'aux','TAG':'MD','OP':'+'},{'DEP':'auxpass','TAG':'VB'},{'TAG':'VBN'}])\n",
     "\n",
-    "#ex = nlp(\"He is known to me.\")\n",
-    "#matches = matcher(nlp(Passive))\n",
     "\n",
-    "for num,sentence in enumerate(nlp(Passive).sents):\n",
+    "ex = nlp(\"The homework was not rarely being done by Anya.\")\n",
+    "matches = matcher(ex)\n",
+    "\n",
+    "\"\"\"for num,sentence in enumerate(nlp(Passive).sents):\n",
     "    print(f'{num}: {sentence}')\n",
     "    s = sentence.as_doc()\n",
-    "    matches = matcher(s)"
+    "    matches = matcher(s)\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The the DET DT det Xxx True True\n",
+      "homework homework NOUN NN nsubjpass xxxx True False\n",
+      "was be VERB VBD aux xxx True True\n",
+      "not not ADV RB neg xxx True True\n",
+      "being be VERB VBG auxpass xxxx True True\n",
+      "done do VERB VBN ROOT xxxx True True\n",
+      "by by ADP IN agent xx True True\n",
+      "Anya Anya PROPN NNP pobj Xxxx True False\n"
+     ]
+    }
+   ],
    "source": [
-    "lol = nlp(\"The homework will be done by Anya\")\n",
+    "lol = nlp(\"The homework was not being done by Anya\")\n",
     "\n",
     "for token in lol:\n",
     "    print(token.text, token.lemma_, token.pos_, token.tag_, token.dep_,\n",
@@ -567,11 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'verb, past tense'"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "spacy.explain('MD')"
+    "spacy.explain('VBD')"
    ]
   },
   {
@@ -583,21 +489,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0: He has been reading the book for two hours.\n",
-      "Present perfect\n",
-      "PRESENT PERFECT CONTINUOUS\n",
-      "1: He has finished his homework.\n",
-      "Present perfect\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#PRESENT PERFECT CONTINUOUS\n",
     "def on_match_ppc(matcher, doc, id, matches):\n",
@@ -675,21 +569,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sentence :  He has been reading the book for two hours.\n",
-      "Present perfect\n",
-      "PRESENT PERFECT CONTINUOUS\n",
-      "sentence :  He has finished his homework.\n",
-      "Present perfect\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "raw_text = \"He has been reading the book for two hours. He has finished his homework.\"\n",
     "doc = nlp(raw_text)\n",
